<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_selector">

            <ImageView
                android:id="@+id/icon_add_priority"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_star"
                android:scaleType="centerInside"
                android:layout_alignParentStart="true"
                android:layout_margin="12dp"/>

            <ImageView
                android:id="@+id/icon_dialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_task"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_dialog"
                android:text="@string/what_work_in_week"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_work"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                app:boxStrokeColor="@color/purple500"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                app:boxStrokeColor="@color/purple500"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:padding="8dp"
                    android:textColor="@color/gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/add"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>