<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark700">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark500">

            <ImageView
                android:id="@+id/icon_dialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_task" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_dialog"
                android:text="@string/what_work_in_week"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="4dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_work"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@color/gray"
                android:layout_marginTop="12dp"
                app:boxStrokeColor="@color/gray"
                app:hintTextColor="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:textColorHint="@color/gray"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                app:boxStrokeColor="@color/gray"
                app:hintTextColor="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/chooseDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:inputType="none"
                    android:backgroundTint="@color/dark700"
                    android:padding="8dp"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark700"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="24dp"
                    android:backgroundTint="@color/purple"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/cancel"
                    android:textColor="@color/purple"
                    app:strokeColor="@color/purple"
                    android:layout_marginEnd="24dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_marginStart="12dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>