<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark700"
    tools:context=".view.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_main" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        android:backgroundTint="@color/dark500"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu"
            style="@style/MegaBottomNavigation"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/bottomAppBar"
        app:tint="@color/dark700" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/signs"
        android:src="@drawable/ic_task"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="start"
        app:tint="@color/purple" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/task"
        android:scaleType="fitStart"
        android:src="@drawable/ic_pen"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="end"
        app:tint="@color/purple" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>